# matsci-gnn-pinn

./: .gitattributes  .gitignore  README.md  environment-cu130-local.yml  environment.yml  findings.md  progress.md  pyproject.toml  task_plan.md
docs/: ambench_downloads.md  closure_mvp_execution_plan.md  data_direction_report.md  environment.md  experiment_plan.md  local_torch_cu130_setup.md  repo_architecture.md  research_route.md  server_environment_snapshot.md  server_execution_plan.md  server_runbook.md
requirements/: base.txt  notebooks.txt  pyg-torch27-cpu.txt  pyg-torch27-cu118.txt  pyg-torch27-cu126.txt  research-extra.txt  science.txt  torch-cpu.txt  torch-cu118.txt  torch-cu126.txt  torch-local-cu130.txt
tests/: __init__.py  test_ambench_adapter.py  test_ambench_downloads.py  test_ambench_hdf5_adapter.py  test_ambench_microstructure.py  test_data_audit.py  test_field_baseline.py  test_graph_coupling.py  test_heat_pinn.py  test_inspect_table.py  test_macro_pinn_train.py  test_phase100_local_mechanism_evidence_package.py  test_phase101_registered_target_acquisition_gate.py  test_phase102_registered_source_manifest_gate.py  test_phase103_nist_ammt_deep_registration_probe.py  test_phase103_nist_ammt_join_probe.py  test_phase103_nist_ammt_member_schema_sampler.py  test_phase103_nist_ammt_registered_intake_audit.py  test_phase103_nist_ammt_schema_scout.py  test_phase103_nist_ammt_tiny_registered_table_builder.py  test_phase103_nist_ammt_tiny_table_feasibility_gate.py  test_phase104_nist_ammt_baseline_smoke.py  test_phase104_nist_ammt_runner_contract.py  (+222 more)
(+1180 files in other folders)
